--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_about">About</string>
     <string name="title_activity_kilograms">Kilograms</string>
     <string name="title_activity_inches">Inches</string>
+    <string name="title_activity_time">World Time</string>
 </resources>
